# Roadef2020Challenge

./: .gitignore  CMakeLists.txt  README.md  cchecker.cpp  cchecker.h  checker.cpp  checker.h  checker_benchmark.cpp  collect_outputs.sh  example1.json  improved_solver.cpp  improved_solver.h  main.cpp  out.txt  parser.cpp  parser.h  pychecker.py  res.csv  results_analysis.ipynb  run_script.py  run_several_times.py  run_stochastic.py  solver.cpp  solver.h  temp.json  tests.cpp
checkers/: abstract_checker.h  checker.cpp  checker.h  checker_benchmark.cpp  partial_checker.cpp  partial_checker.h
libs/: catch.hpp
results/: genetic_solver_results.csv  hill_climbing_solver_results.csv  simulated_annealing2.csv  simulated_annealing_solver.csv  stochastic_solver_results.csv
run_scripts/: config.py  run_genetic_solver.py  run_hill_climbing_solver.py  run_simulated_annealing_solver.py
solvers/: HillClimbing.cpp  HillClimbing.h  abstract_solver.cpp  abstract_solver.h  genetic_solver.cpp  genetic_solver.h  hill_climber_solver.cpp  hill_climber_solver.h  hill_climbing.cpp  improved_random_solver.cpp  improved_random_solver.h  random_solver.cpp  random_solver.h  smart_solver.cpp  smart_solver.h  stochastic_walk_solver.cpp  stochastic_walk_solver.h
source/checkers/: abstract_checker.h  checker.cpp  checker_benchmark.cpp
source/libs/: json.hpp
source/solvers/: abstract_solver.cpp  hill_climbing.cpp  hill_climbing.h  random_solver.h
source/structs/: parser.h
structs/: parser.cpp  parser.h  structs.h
tests/: test_all.cpp  test_solution_checker.cpp
